Stopping point for working on task div collapse

--- a/src/style.css
+++ b/src/style.css
@@ -291,10 +291,17 @@ button:active {
   background-color: #ffffff;
   color: var(--primary-text);
   width: 40%;
+  height: 20%;
   border-radius: 8px;
   padding: 10px;
 }
 
 .taskDiv h3 {
   color: var(--primary-text);
+}
+
+.contentDiv p {
+  margin: 0;
+  padding: 0 15px;
+  max-width: 100%;
 }
